build/parser.output
Non-terminaux inutiles dans la grammaire

    functions
    parametres


Terminaux inutilisés dans la grammaire

    FONCTION


Règles inutiles dans la grammaire

  102 programme: functions programme

  103 functions: FONCTION STRING '(' parametres ')' '{' NL instructions '}' NL

  104 instructions: STRING parametres

  105 parametres: STRING parametres
  106           | ENTIER parametres


État 17 conflits: 5 réduction/réduction
État 33 conflits: 1 décalage/réduction


Grammaire

    0 $accept: main $end

    1 main: TAILLE ENTIER ENTIER ';' programme

    2 programme: instructions ';' NL programme
    3          | boucle NL programme
    4          | COND NL programme
    5          | END ';' NL
    6          | NL programme

    7 boucle: REPETE ENTIER FOIS '{' NL instructions '}'
    8       | WHILE '(' comparaison ')' '{' NL instructions '}'

    9 COND: SI '(' comparaison ')' ALORS '{' NL instructions '}'
   10     | SI '(' comparaisons ')' ALORS '{' NL instructions '}'
   11     | COND NL SINON '{' NL instructions '}'

   12 instructions: figures
   13             | affectation

   14 affectation: STRING '=' figures
   15            | STRING '=' ENTIER
   16            | BOOL STRING '=' TRUE
   17            | BOOL STRING '=' FALSE
   18            | REEL STRING '=' FLOTTANT
   19            | VAR_COULEUR '=' VAL_COULEUR
   20            | VAR_FIGURE '.' TAILLE '=' ENTIER
   21            | VAR_FIGURE '.' LONGUEUR '=' ENTIER
   22            | VAR_FIGURE '.' HAUTEUR '=' ENTIER
   23            | VAR_FIGURE '.' X '=' ENTIER
   24            | VAR_FIGURE '.' Y '=' ENTIER
   25            | VAR_FIGURE '.' COULEUR '=' VAL_COULEUR
   26            | VAR_FIGURE '.' REMPLISSAGE '=' VAL_COULEUR
   27            | VAR_FIGURE '.' EPAISSEUR '=' ENTIER
   28            | VAR_FIGURE '.' OPACITE '=' ENTIER '%'
   29            | VAR_FIGURE '.' ROTATION '=' ENTIER
   30            | VAR_FIGURE '.' X1 '=' ENTIER
   31            | VAR_FIGURE '.' Y1 '=' ENTIER
   32            | VAR_FIGURE '.' X2 '=' ENTIER
   33            | VAR_FIGURE '.' Y2 '=' ENTIER
   34            | VAR_FIGURE '.' X3 '=' ENTIER
   35            | VAR_FIGURE '.' Y3 '=' ENTIER
   36            | VAR_FIGURE '.' X4 '=' ENTIER
   37            | VAR_FIGURE '.' Y4 '=' ENTIER
   38            | VAR_FIGURE '.' RAYON '=' ENTIER

   39 comparaisons: '(' comparaison ')' AND comparaisons
   40             | '(' comparaison ')' AND '(' comparaison ')'

   41 comparaison: ENTIER EGAL ENTIER
   42            | ENTIER DIFF ENTIER
   43            | ENTIER INFEG ENTIER
   44            | ENTIER SUPEG ENTIER
   45            | ENTIER '>' ENTIER
   46            | ENTIER '<' ENTIER
   47            | VAR_COULEUR EST VAL_COULEUR
   48            | VAR_COULEUR NESTPAS VAL_COULEUR

   49 figures: figuresansattr
   50        | figureavecattr

   51 VAR_COULEUR: COULEUR STRING
   52            | STRING

   53 VAR_FIGURE: STRING
   54           | CARRE '[' ENTIER ']'
   55           | RECTANGLE '[' ENTIER ']'
   56           | TRIANGLE '[' ENTIER ']'
   57           | ELLIPSE '[' ENTIER ']'
   58           | CERCLE '[' ENTIER ']'
   59           | TEXTE '[' ENTIER ']'
   60           | CHEMIN '[' ENTIER ']'
   61           | LIGNE '[' ENTIER ']'

   62 figureavecattr: figuresansattr FLECHE ATTRS1
   63               | figuresansattr '{' NL ATTRS2 '}'

   64 figuresansattr: RECTANGLE ENTIER ENTIER ENTIER ENTIER ENTIER ENTIER ENTIER ENTIER
   65               | CARRE ENTIER ENTIER ENTIER
   66               | TRIANGLE ENTIER ENTIER ENTIER ENTIER
   67               | CERCLE ENTIER ENTIER ENTIER
   68               | ELLIPSE ENTIER ENTIER ENTIER ENTIER
   69               | LIGNE ENTIER ENTIER ENTIER ENTIER
   70               | CHEMIN ENTIER ENTIER ',' coords
   71               | TEXTE ENTIER ENTIER STRING STRING

   72 coords: ENTIER ENTIER ',' coords
   73       | ENTIER ENTIER

   74 ATTRS1: ATTR '&' ATTRS1
   75       | ATTR

   76 ATTRS2: ATTR ';' NL ATTRS2
   77       | %empty

   78 ATTR: ROTATION ':' ENTIER
   79     | OPACITE ':' ENTIER '%'
   80     | EPAISSEUR ':' ENTIER
   81     | COULEUR ':' VAL_COULEUR
   82     | REMPLISSAGE ':' VAL_COULEUR

   83 ENTIER: NUMBER
   84       | STRING
   85       | ENTIER '*' ENTIER
   86       | ENTIER '+' ENTIER
   87       | ENTIER '-' ENTIER
   88       | ENTIER '/' ENTIER
   89       | '-' ENTIER
   90       | INT STRING

   91 VAL_COULEUR: RGB '(' NUMBER ',' NUMBER ',' NUMBER ')'
   92            | COULEURG
   93            | ROUGE
   94            | VERT
   95            | JAUNE
   96            | BLEU
   97            | VIOLET
   98            | MAGENTA
   99            | CYAN
  100            | NOIR
  101            | BLANC


Terminaux, suivis des règles où ils apparaissent

    $end (0) 0
    '%' (37) 28 79
    '&' (38) 74
    '(' (40) 8 9 10 39 40 91
    ')' (41) 8 9 10 39 40 91
    '*' (42) 85
    '+' (43) 86
    ',' (44) 70 72 91
    '-' (45) 87 89
    '.' (46) 20 21 22 23 24 25 26 27 28 29 30 31 32 33 34 35 36 37 38
    '/' (47) 88
    ':' (58) 78 79 80 81 82
    ';' (59) 1 2 5 76
    '<' (60) 46
    '=' (61) 14 15 16 17 18 19 20 21 22 23 24 25 26 27 28 29 30 31 32 33 34 35 36 37 38
    '>' (62) 45
    '[' (91) 54 55 56 57 58 59 60 61
    ']' (93) 54 55 56 57 58 59 60 61
    '{' (123) 7 8 9 10 11 63
    '}' (125) 7 8 9 10 11 63
    error (256)
    NL (258) 2 3 4 5 6 7 8 9 10 11 63 76
    END (259) 5
    RECTANGLE (260) 55 64
    CARRE (261) 54 65
    TRIANGLE (262) 56 66
    CERCLE (263) 58 67
    ELLIPSE (264) 57 68
    LIGNE (265) 61 69
    CHEMIN (266) 60 70
    TEXTE (267) 59 71
    NUMBER <int> (268) 83 91
    STRING <std::string> (269) 14 15 16 17 18 51 52 53 71 84 90
    FLECHE (270) 62
    REMPLISSAGE (271) 26 82
    COULEUR (272) 25 51 81
    EPAISSEUR (273) 27 80
    ROTATION (274) 29 78
    OPACITE (275) 28 79
    BOOL <bool> (276) 16 17
    FLOTTANT <double> (277) 18
    TAILLE (278) 1 20
    LONGUEUR (279) 21
    HAUTEUR (280) 22
    X (281) 23
    Y (282) 24
    X1 (283) 30
    X2 (284) 32
    X3 (285) 34
    X4 (286) 36
    Y1 (287) 31
    Y2 (288) 33
    Y3 (289) 35
    Y4 (290) 37
    RAYON (291) 38
    RGB (292) 91
    ROUGE (293) 93
    BLEU (294) 96
    VERT (295) 94
    JAUNE (296) 95
    VIOLET (297) 97
    MAGENTA (298) 98
    CYAN (299) 99
    NOIR (300) 100
    BLANC (301) 101
    TRUE (302) 16
    FALSE (303) 17
    INT (304) 90
    REEL (305) 18
    SI (306) 9 10
    SINON (307) 11
    ALORS (308) 9 10
    EGAL (309) 41
    DIFF (310) 42
    INFEG (311) 43
    SUPEG (312) 44
    EST (313) 47
    NESTPAS (314) 48
    AND (315) 39 40
    WHILE (316) 8
    REPETE (317) 7
    FOIS (318) 7
    FONCTION (319)
    COULEURG (320) 92
    NEG (321)


Non-terminaux, suivis des règles où ils apparaissent

    $accept (86)
        à gauche: 0
    main (87)
        à gauche: 1
        à droite: 0
    programme (88)
        à gauche: 2 3 4 5 6
        à droite: 1 2 3 4 6
    boucle (89)
        à gauche: 7 8
        à droite: 3
    COND (90)
        à gauche: 9 10 11
        à droite: 4 11
    instructions (91)
        à gauche: 12 13
        à droite: 2 7 8 9 10 11
    affectation (92)
        à gauche: 14 15 16 17 18 19 20 21 22 23 24 25 26 27 28 29 30 31 32 33 34 35 36 37 38
        à droite: 13
    comparaisons <ExpressionPtr> (93)
        à gauche: 39 40
        à droite: 10 39
    comparaison <ExpressionPtr> (94)
        à gauche: 41 42 43 44 45 46 47 48
        à droite: 8 9 39 40
    figures <ExpressionPtr> (95)
        à gauche: 49 50
        à droite: 12 14
    VAR_COULEUR <std::string> (96)
        à gauche: 51 52
        à droite: 19 47 48
    VAR_FIGURE <ExpressionPtr> (97)
        à gauche: 53 54 55 56 57 58 59 60 61
        à droite: 20 21 22 23 24 25 26 27 28 29 30 31 32 33 34 35 36 37 38
    figureavecattr <ExpressionPtr> (98)
        à gauche: 62 63
        à droite: 50
    figuresansattr <ExpressionPtr> (99)
        à gauche: 64 65 66 67 68 69 70 71
        à droite: 49 62 63
    coords (100)
        à gauche: 72 73
        à droite: 70 72
    ATTRS1 (101)
        à gauche: 74 75
        à droite: 62 74
    ATTRS2 (102)
        à gauche: 76 77
        à droite: 63 76
    ATTR (103)
        à gauche: 78 79 80 81 82
        à droite: 74 75 76
    ENTIER <ExpressionPtr> (104)
        à gauche: 83 84 85 86 87 88 89 90
        à droite: 1 7 15 20 21 22 23 24 27 28 29 30 31 32 33 34 35 36 37 38 41 42 43 44 45 46 54 55 56 57 58 59 60 61 64 65 66 67 68 69 70 71 72 73 78 79 80 85 86 87 88 89
    VAL_COULEUR <couleur> (105)
        à gauche: 91 92 93 94 95 96 97 98 99 100 101
        à droite: 19 25 26 47 48 81 82


État 0

    0 $accept: • main $end

    TAILLE  décalage et aller à l'état 1

    main  aller à l'état 2


État 1

    1 main: TAILLE • ENTIER ENTIER ';' programme

    NUMBER  décalage et aller à l'état 3
    STRING  décalage et aller à l'état 4
    INT     décalage et aller à l'état 5
    '-'     décalage et aller à l'état 6

    ENTIER  aller à l'état 7


État 2

    0 $accept: main • $end

    $end  décalage et aller à l'état 8


État 3

   83 ENTIER: NUMBER •

    $défaut  réduction par utilisation de la règle 83 (ENTIER)


État 4

   84 ENTIER: STRING •

    $défaut  réduction par utilisation de la règle 84 (ENTIER)


État 5

   90 ENTIER: INT • STRING

    STRING  décalage et aller à l'état 9


État 6

   89 ENTIER: '-' • ENTIER

    NUMBER  décalage et aller à l'état 3
    STRING  décalage et aller à l'état 4
    INT     décalage et aller à l'état 5
    '-'     décalage et aller à l'état 6

    ENTIER  aller à l'état 10


État 7

    1 main: TAILLE ENTIER • ENTIER ';' programme
   85 ENTIER: ENTIER • '*' ENTIER
   86       | ENTIER • '+' ENTIER
   87       | ENTIER • '-' ENTIER
   88       | ENTIER • '/' ENTIER

    NUMBER  décalage et aller à l'état 3
    STRING  décalage et aller à l'état 4
    INT     décalage et aller à l'état 5
    '-'     décalage et aller à l'état 11
    '+'     décalage et aller à l'état 12
    '*'     décalage et aller à l'état 13
    '/'     décalage et aller à l'état 14

    ENTIER  aller à l'état 15


État 8

    0 $accept: main $end •

    $défaut  accepter


État 9

   90 ENTIER: INT STRING •

    $défaut  réduction par utilisation de la règle 90 (ENTIER)


État 10

   85 ENTIER: ENTIER • '*' ENTIER
   86       | ENTIER • '+' ENTIER
   87       | ENTIER • '-' ENTIER
   88       | ENTIER • '/' ENTIER
   89       | '-' ENTIER •

    $défaut  réduction par utilisation de la règle 89 (ENTIER)


État 11

   87 ENTIER: ENTIER '-' • ENTIER
   89       | '-' • ENTIER

    NUMBER  décalage et aller à l'état 3
    STRING  décalage et aller à l'état 4
    INT     décalage et aller à l'état 5
    '-'     décalage et aller à l'état 6

    ENTIER  aller à l'état 17


État 12

   86 ENTIER: ENTIER '+' • ENTIER

    NUMBER  décalage et aller à l'état 3
    STRING  décalage et aller à l'état 4
    INT     décalage et aller à l'état 5
    '-'     décalage et aller à l'état 6

    ENTIER  aller à l'état 18


État 13

   85 ENTIER: ENTIER '*' • ENTIER

    NUMBER  décalage et aller à l'état 3
    STRING  décalage et aller à l'état 4
    INT     décalage et aller à l'état 5
    '-'     décalage et aller à l'état 6

    ENTIER  aller à l'état 19


État 14

   88 ENTIER: ENTIER '/' • ENTIER

    NUMBER  décalage et aller à l'état 3
    STRING  décalage et aller à l'état 4
    INT     décalage et aller à l'état 5
    '-'     décalage et aller à l'état 6

    ENTIER  aller à l'état 20


État 15

    1 main: TAILLE ENTIER ENTIER • ';' programme
   85 ENTIER: ENTIER • '*' ENTIER
   86       | ENTIER • '+' ENTIER
   87       | ENTIER • '-' ENTIER
   88       | ENTIER • '/' ENTIER

    '-'  décalage et aller à l'état 16
    '+'  décalage et aller à l'état 12
    '*'  décalage et aller à l'état 13
    '/'  décalage et aller à l'état 14
    ';'  décalage et aller à l'état 21


État 16

   87 ENTIER: ENTIER '-' • ENTIER

    NUMBER  décalage et aller à l'état 3
    STRING  décalage et aller à l'état 4
    INT     décalage et aller à l'état 5
    '-'     décalage et aller à l'état 6

    ENTIER  aller à l'état 22


État 17

   85 ENTIER: ENTIER • '*' ENTIER
   86       | ENTIER • '+' ENTIER
   87       | ENTIER • '-' ENTIER
   87       | ENTIER '-' ENTIER •
   88       | ENTIER • '/' ENTIER
   89       | '-' ENTIER •

    NUMBER   réduction par utilisation de la règle 87 (ENTIER)
    NUMBER   [réduction par utilisation de la règle 89 (ENTIER)]
    STRING   réduction par utilisation de la règle 87 (ENTIER)
    STRING   [réduction par utilisation de la règle 89 (ENTIER)]
    INT      réduction par utilisation de la règle 87 (ENTIER)
    INT      [réduction par utilisation de la règle 89 (ENTIER)]
    '-'      réduction par utilisation de la règle 87 (ENTIER)
    '-'      [réduction par utilisation de la règle 89 (ENTIER)]
    '+'      réduction par utilisation de la règle 87 (ENTIER)
    '+'      [réduction par utilisation de la règle 89 (ENTIER)]
    $défaut  réduction par utilisation de la règle 89 (ENTIER)


État 18

   85 ENTIER: ENTIER • '*' ENTIER
   86       | ENTIER • '+' ENTIER
   86       | ENTIER '+' ENTIER •
   87       | ENTIER • '-' ENTIER
   88       | ENTIER • '/' ENTIER

    '*'  décalage et aller à l'état 13
    '/'  décalage et aller à l'état 14

    $défaut  réduction par utilisation de la règle 86 (ENTIER)


État 19

   85 ENTIER: ENTIER • '*' ENTIER
   85       | ENTIER '*' ENTIER •
   86       | ENTIER • '+' ENTIER
   87       | ENTIER • '-' ENTIER
   88       | ENTIER • '/' ENTIER

    $défaut  réduction par utilisation de la règle 85 (ENTIER)


État 20

   85 ENTIER: ENTIER • '*' ENTIER
   86       | ENTIER • '+' ENTIER
   87       | ENTIER • '-' ENTIER
   88       | ENTIER • '/' ENTIER
   88       | ENTIER '/' ENTIER •

    $défaut  réduction par utilisation de la règle 88 (ENTIER)


État 21

    1 main: TAILLE ENTIER ENTIER ';' • programme

    NL         décalage et aller à l'état 23
    END        décalage et aller à l'état 24
    RECTANGLE  décalage et aller à l'état 25
    CARRE      décalage et aller à l'état 26
    TRIANGLE   décalage et aller à l'état 27
    CERCLE     décalage et aller à l'état 28
    ELLIPSE    décalage et aller à l'état 29
    LIGNE      décalage et aller à l'état 30
    CHEMIN     décalage et aller à l'état 31
    TEXTE      décalage et aller à l'état 32
    STRING     décalage et aller à l'état 33
    COULEUR    décalage et aller à l'état 34
    BOOL       décalage et aller à l'état 35
    REEL       décalage et aller à l'état 36
    SI         décalage et aller à l'état 37
    WHILE      décalage et aller à l'état 38
    REPETE     décalage et aller à l'état 39

    programme       aller à l'état 40
    boucle          aller à l'état 41
    COND            aller à l'état 42
    instructions    aller à l'état 43
    affectation     aller à l'état 44
    figures         aller à l'état 45
    VAR_COULEUR     aller à l'état 46
    VAR_FIGURE      aller à l'état 47
    figureavecattr  aller à l'état 48
    figuresansattr  aller à l'état 49


État 22

   85 ENTIER: ENTIER • '*' ENTIER
   86       | ENTIER • '+' ENTIER
   87       | ENTIER • '-' ENTIER
   87       | ENTIER '-' ENTIER •
   88       | ENTIER • '/' ENTIER

    '*'  décalage et aller à l'état 13
    '/'  décalage et aller à l'état 14

    $défaut  réduction par utilisation de la règle 87 (ENTIER)


État 23

    6 programme: NL • programme

    NL         décalage et aller à l'état 23
    END        décalage et aller à l'état 24
    RECTANGLE  décalage et aller à l'état 25
    CARRE      décalage et aller à l'état 26
    TRIANGLE   décalage et aller à l'état 27
    CERCLE     décalage et aller à l'état 28
    ELLIPSE    décalage et aller à l'état 29
    LIGNE      décalage et aller à l'état 30
    CHEMIN     décalage et aller à l'état 31
    TEXTE      décalage et aller à l'état 32
    STRING     décalage et aller à l'état 33
    COULEUR    décalage et aller à l'état 34
    BOOL       décalage et aller à l'état 35
    REEL       décalage et aller à l'état 36
    SI         décalage et aller à l'état 37
    WHILE      décalage et aller à l'état 38
    REPETE     décalage et aller à l'état 39

    programme       aller à l'état 50
    boucle          aller à l'état 41
    COND            aller à l'état 42
    instructions    aller à l'état 43
    affectation     aller à l'état 44
    figures         aller à l'état 45
    VAR_COULEUR     aller à l'état 46
    VAR_FIGURE      aller à l'état 47
    figureavecattr  aller à l'état 48
    figuresansattr  aller à l'état 49


État 24

    5 programme: END • ';' NL

    ';'  décalage et aller à l'état 51


État 25

   55 VAR_FIGURE: RECTANGLE • '[' ENTIER ']'
   64 figuresansattr: RECTANGLE • ENTIER ENTIER ENTIER ENTIER ENTIER ENTIER ENTIER ENTIER

    NUMBER  décalage et aller à l'état 3
    STRING  décalage et aller à l'état 4
    INT     décalage et aller à l'état 5
    '-'     décalage et aller à l'état 6
    '['     décalage et aller à l'état 52

    ENTIER  aller à l'état 53


État 26

   54 VAR_FIGURE: CARRE • '[' ENTIER ']'
   65 figuresansattr: CARRE • ENTIER ENTIER ENTIER

    NUMBER  décalage et aller à l'état 3
    STRING  décalage et aller à l'état 4
    INT     décalage et aller à l'état 5
    '-'     décalage et aller à l'état 6
    '['     décalage et aller à l'état 54

    ENTIER  aller à l'état 55


État 27

   56 VAR_FIGURE: TRIANGLE • '[' ENTIER ']'
   66 figuresansattr: TRIANGLE • ENTIER ENTIER ENTIER ENTIER

    NUMBER  décalage et aller à l'état 3
    STRING  décalage et aller à l'état 4
    INT     décalage et aller à l'état 5
    '-'     décalage et aller à l'état 6
    '['     décalage et aller à l'état 56

    ENTIER  aller à l'état 57


État 28

   58 VAR_FIGURE: CERCLE • '[' ENTIER ']'
   67 figuresansattr: CERCLE • ENTIER ENTIER ENTIER

    NUMBER  décalage et aller à l'état 3
    STRING  décalage et aller à l'état 4
    INT     décalage et aller à l'état 5
    '-'     décalage et aller à l'état 6
    '['     décalage et aller à l'état 58

    ENTIER  aller à l'état 59


État 29

   57 VAR_FIGURE: ELLIPSE • '[' ENTIER ']'
   68 figuresansattr: ELLIPSE • ENTIER ENTIER ENTIER ENTIER

    NUMBER  décalage et aller à l'état 3
    STRING  décalage et aller à l'état 4
    INT     décalage et aller à l'état 5
    '-'     décalage et aller à l'état 6
    '['     décalage et aller à l'état 60

    ENTIER  aller à l'état 61


État 30

   61 VAR_FIGURE: LIGNE • '[' ENTIER ']'
   69 figuresansattr: LIGNE • ENTIER ENTIER ENTIER ENTIER

    NUMBER  décalage et aller à l'état 3
    STRING  décalage et aller à l'état 4
    INT     décalage et aller à l'état 5
    '-'     décalage et aller à l'état 6
    '['     décalage et aller à l'état 62

    ENTIER  aller à l'état 63


État 31

   60 VAR_FIGURE: CHEMIN • '[' ENTIER ']'
   70 figuresansattr: CHEMIN • ENTIER ENTIER ',' coords

    NUMBER  décalage et aller à l'état 3
    STRING  décalage et aller à l'état 4
    INT     décalage et aller à l'état 5
    '-'     décalage et aller à l'état 6
    '['     décalage et aller à l'état 64

    ENTIER  aller à l'état 65


État 32

   59 VAR_FIGURE: TEXTE • '[' ENTIER ']'
   71 figuresansattr: TEXTE • ENTIER ENTIER STRING STRING

    NUMBER  décalage et aller à l'état 3
    STRING  décalage et aller à l'état 4
    INT     décalage et aller à l'état 5
    '-'     décalage et aller à l'état 6
    '['     décalage et aller à l'état 66

    ENTIER  aller à l'état 67


État 33

   14 affectation: STRING • '=' figures
   15            | STRING • '=' ENTIER
   52 VAR_COULEUR: STRING •
   53 VAR_FIGURE: STRING •

    '='  décalage et aller à l'état 68

    '='      [réduction par utilisation de la règle 52 (VAR_COULEUR)]
    $défaut  réduction par utilisation de la règle 53 (VAR_FIGURE)


État 34

   51 VAR_COULEUR: COULEUR • STRING

    STRING  décalage et aller à l'état 69


État 35

   16 affectation: BOOL • STRING '=' TRUE
   17            | BOOL • STRING '=' FALSE

    STRING  décalage et aller à l'état 70


État 36

   18 affectation: REEL • STRING '=' FLOTTANT

    STRING  décalage et aller à l'état 71


État 37

    9 COND: SI • '(' comparaison ')' ALORS '{' NL instructions '}'
   10     | SI • '(' comparaisons ')' ALORS '{' NL instructions '}'

    '('  décalage et aller à l'état 72


État 38

    8 boucle: WHILE • '(' comparaison ')' '{' NL instructions '}'

    '('  décalage et aller à l'état 73


État 39

    7 boucle: REPETE • ENTIER FOIS '{' NL instructions '}'

    NUMBER  décalage et aller à l'état 3
    STRING  décalage et aller à l'état 4
    INT     décalage et aller à l'état 5
    '-'     décalage et aller à l'état 6

    ENTIER  aller à l'état 74


État 40

    1 main: TAILLE ENTIER ENTIER ';' programme •

    $défaut  réduction par utilisation de la règle 1 (main)


État 41

    3 programme: boucle • NL programme

    NL  décalage et aller à l'état 75


État 42

    4 programme: COND • NL programme
   11 COND: COND • NL SINON '{' NL instructions '}'

    NL  décalage et aller à l'état 76


État 43

    2 programme: instructions • ';' NL programme

    ';'  décalage et aller à l'état 77


État 44

   13 instructions: affectation •

    $défaut  réduction par utilisation de la règle 13 (instructions)


État 45

   12 instructions: figures •

    $défaut  réduction par utilisation de la règle 12 (instructions)


État 46

   19 affectation: VAR_COULEUR • '=' VAL_COULEUR

    '='  décalage et aller à l'état 78


État 47

   20 affectation: VAR_FIGURE • '.' TAILLE '=' ENTIER
   21            | VAR_FIGURE • '.' LONGUEUR '=' ENTIER
   22            | VAR_FIGURE • '.' HAUTEUR '=' ENTIER
   23            | VAR_FIGURE • '.' X '=' ENTIER
   24            | VAR_FIGURE • '.' Y '=' ENTIER
   25            | VAR_FIGURE • '.' COULEUR '=' VAL_COULEUR
   26            | VAR_FIGURE • '.' REMPLISSAGE '=' VAL_COULEUR
   27            | VAR_FIGURE • '.' EPAISSEUR '=' ENTIER
   28            | VAR_FIGURE • '.' OPACITE '=' ENTIER '%'
   29            | VAR_FIGURE • '.' ROTATION '=' ENTIER
   30            | VAR_FIGURE • '.' X1 '=' ENTIER
   31            | VAR_FIGURE • '.' Y1 '=' ENTIER
   32            | VAR_FIGURE • '.' X2 '=' ENTIER
   33            | VAR_FIGURE • '.' Y2 '=' ENTIER
   34            | VAR_FIGURE • '.' X3 '=' ENTIER
   35            | VAR_FIGURE • '.' Y3 '=' ENTIER
   36            | VAR_FIGURE • '.' X4 '=' ENTIER
   37            | VAR_FIGURE • '.' Y4 '=' ENTIER
   38            | VAR_FIGURE • '.' RAYON '=' ENTIER

    '.'  décalage et aller à l'état 79


État 48

   50 figures: figureavecattr •

    $défaut  réduction par utilisation de la règle 50 (figures)


État 49

   49 figures: figuresansattr •
   62 figureavecattr: figuresansattr • FLECHE ATTRS1
   63               | figuresansattr • '{' NL ATTRS2 '}'

    FLECHE  décalage et aller à l'état 80
    '{'     décalage et aller à l'état 81

    $défaut  réduction par utilisation de la règle 49 (figures)


État 50

    6 programme: NL programme •

    $défaut  réduction par utilisation de la règle 6 (programme)


État 51

    5 programme: END ';' • NL

    NL  décalage et aller à l'état 82


État 52

   55 VAR_FIGURE: RECTANGLE '[' • ENTIER ']'

    NUMBER  décalage et aller à l'état 3
    STRING  décalage et aller à l'état 4
    INT     décalage et aller à l'état 5
    '-'     décalage et aller à l'état 6

    ENTIER  aller à l'état 83


État 53

   64 figuresansattr: RECTANGLE ENTIER • ENTIER ENTIER ENTIER ENTIER ENTIER ENTIER ENTIER
   85 ENTIER: ENTIER • '*' ENTIER
   86       | ENTIER • '+' ENTIER
   87       | ENTIER • '-' ENTIER
   88       | ENTIER • '/' ENTIER

    NUMBER  décalage et aller à l'état 3
    STRING  décalage et aller à l'état 4
    INT     décalage et aller à l'état 5
    '-'     décalage et aller à l'état 11
    '+'     décalage et aller à l'état 12
    '*'     décalage et aller à l'état 13
    '/'     décalage et aller à l'état 14

    ENTIER  aller à l'état 84


État 54

   54 VAR_FIGURE: CARRE '[' • ENTIER ']'

    NUMBER  décalage et aller à l'état 3
    STRING  décalage et aller à l'état 4
    INT     décalage et aller à l'état 5
    '-'     décalage et aller à l'état 6

    ENTIER  aller à l'état 85


État 55

   65 figuresansattr: CARRE ENTIER • ENTIER ENTIER
   85 ENTIER: ENTIER • '*' ENTIER
   86       | ENTIER • '+' ENTIER
   87       | ENTIER • '-' ENTIER
   88       | ENTIER • '/' ENTIER

    NUMBER  décalage et aller à l'état 3
    STRING  décalage et aller à l'état 4
    INT     décalage et aller à l'état 5
    '-'     décalage et aller à l'état 11
    '+'     décalage et aller à l'état 12
    '*'     décalage et aller à l'état 13
    '/'     décalage et aller à l'état 14

    ENTIER  aller à l'état 86


État 56

   56 VAR_FIGURE: TRIANGLE '[' • ENTIER ']'

    NUMBER  décalage et aller à l'état 3
    STRING  décalage et aller à l'état 4
    INT     décalage et aller à l'état 5
    '-'     décalage et aller à l'état 6

    ENTIER  aller à l'état 87


État 57

   66 figuresansattr: TRIANGLE ENTIER • ENTIER ENTIER ENTIER
   85 ENTIER: ENTIER • '*' ENTIER
   86       | ENTIER • '+' ENTIER
   87       | ENTIER • '-' ENTIER
   88       | ENTIER • '/' ENTIER

    NUMBER  décalage et aller à l'état 3
    STRING  décalage et aller à l'état 4
    INT     décalage et aller à l'état 5
    '-'     décalage et aller à l'état 11
    '+'     décalage et aller à l'état 12
    '*'     décalage et aller à l'état 13
    '/'     décalage et aller à l'état 14

    ENTIER  aller à l'état 88


État 58

   58 VAR_FIGURE: CERCLE '[' • ENTIER ']'

    NUMBER  décalage et aller à l'état 3
    STRING  décalage et aller à l'état 4
    INT     décalage et aller à l'état 5
    '-'     décalage et aller à l'état 6

    ENTIER  aller à l'état 89


État 59

   67 figuresansattr: CERCLE ENTIER • ENTIER ENTIER
   85 ENTIER: ENTIER • '*' ENTIER
   86       | ENTIER • '+' ENTIER
   87       | ENTIER • '-' ENTIER
   88       | ENTIER • '/' ENTIER

    NUMBER  décalage et aller à l'état 3
    STRING  décalage et aller à l'état 4
    INT     décalage et aller à l'état 5
    '-'     décalage et aller à l'état 11
    '+'     décalage et aller à l'état 12
    '*'     décalage et aller à l'état 13
    '/'     décalage et aller à l'état 14

    ENTIER  aller à l'état 90


État 60

   57 VAR_FIGURE: ELLIPSE '[' • ENTIER ']'

    NUMBER  décalage et aller à l'état 3
    STRING  décalage et aller à l'état 4
    INT     décalage et aller à l'état 5
    '-'     décalage et aller à l'état 6

    ENTIER  aller à l'état 91


État 61

   68 figuresansattr: ELLIPSE ENTIER • ENTIER ENTIER ENTIER
   85 ENTIER: ENTIER • '*' ENTIER
   86       | ENTIER • '+' ENTIER
   87       | ENTIER • '-' ENTIER
   88       | ENTIER • '/' ENTIER

    NUMBER  décalage et aller à l'état 3
    STRING  décalage et aller à l'état 4
    INT     décalage et aller à l'état 5
    '-'     décalage et aller à l'état 11
    '+'     décalage et aller à l'état 12
    '*'     décalage et aller à l'état 13
    '/'     décalage et aller à l'état 14

    ENTIER  aller à l'état 92


État 62

   61 VAR_FIGURE: LIGNE '[' • ENTIER ']'

    NUMBER  décalage et aller à l'état 3
    STRING  décalage et aller à l'état 4
    INT     décalage et aller à l'état 5
    '-'     décalage et aller à l'état 6

    ENTIER  aller à l'état 93


État 63

   69 figuresansattr: LIGNE ENTIER • ENTIER ENTIER ENTIER
   85 ENTIER: ENTIER • '*' ENTIER
   86       | ENTIER • '+' ENTIER
   87       | ENTIER • '-' ENTIER
   88       | ENTIER • '/' ENTIER

    NUMBER  décalage et aller à l'état 3
    STRING  décalage et aller à l'état 4
    INT     décalage et aller à l'état 5
    '-'     décalage et aller à l'état 11
    '+'     décalage et aller à l'état 12
    '*'     décalage et aller à l'état 13
    '/'     décalage et aller à l'état 14

    ENTIER  aller à l'état 94


État 64

   60 VAR_FIGURE: CHEMIN '[' • ENTIER ']'

    NUMBER  décalage et aller à l'état 3
    STRING  décalage et aller à l'état 4
    INT     décalage et aller à l'état 5
    '-'     décalage et aller à l'état 6

    ENTIER  aller à l'état 95


État 65

   70 figuresansattr: CHEMIN ENTIER • ENTIER ',' coords
   85 ENTIER: ENTIER • '*' ENTIER
   86       | ENTIER • '+' ENTIER
   87       | ENTIER • '-' ENTIER
   88       | ENTIER • '/' ENTIER

    NUMBER  décalage et aller à l'état 3
    STRING  décalage et aller à l'état 4
    INT     décalage et aller à l'état 5
    '-'     décalage et aller à l'état 11
    '+'     décalage et aller à l'état 12
    '*'     décalage et aller à l'état 13
    '/'     décalage et aller à l'état 14

    ENTIER  aller à l'état 96


État 66

   59 VAR_FIGURE: TEXTE '[' • ENTIER ']'

    NUMBER  décalage et aller à l'état 3
    STRING  décalage et aller à l'état 4
    INT     décalage et aller à l'état 5
    '-'     décalage et aller à l'état 6

    ENTIER  aller à l'état 97


État 67

   71 figuresansattr: TEXTE ENTIER • ENTIER STRING STRING
   85 ENTIER: ENTIER • '*' ENTIER
   86       | ENTIER • '+' ENTIER
   87       | ENTIER • '-' ENTIER
   88       | ENTIER • '/' ENTIER

    NUMBER  décalage et aller à l'état 3
    STRING  décalage et aller à l'état 4
    INT     décalage et aller à l'état 5
    '-'     décalage et aller à l'état 11
    '+'     décalage et aller à l'état 12
    '*'     décalage et aller à l'état 13
    '/'     décalage et aller à l'état 14

    ENTIER  aller à l'état 98


État 68

   14 affectation: STRING '=' • figures
   15            | STRING '=' • ENTIER
